Tela de Cadastro

--- a/src/Home/Index.html
+++ b/src/Home/Index.html
@@ -16,13 +16,16 @@
 
         <section class="navegacao">
             <ul class="flex flex-row">
-                <a href="" class="decoration-inherit">
+                <a href="../Home/Index.html" class="decoration-inherit">
+                    <li>Home</li>
+                </a>
+                <a href="#sobre" class="decoration-inherit">
                     <li>Sobre</li>
                 </a>
-                <a href="" class="decoration-inherit">
+                <a href="../Login/Index.html" class="decoration-inherit">
                     <li>Login</li>
                 </a>
-                <a href="" class="decoration-inherit">
+                <a href="../Cadastro/Index.html" class="decoration-inherit">
                     <li>Cadastro</li>
                 </a>                
             </ul>
@@ -39,7 +42,7 @@
     </header>
 
     <main class="bg-fundo">
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <h1 class="">O que é o To Do List?</h1>
             <p>O to-do list é como ter um assistente virtual para organizar sua vida. Basta criar uma lista de tarefas no computador, tablet ou celular e adicionar o que precisa ser feito. Priorize as tarefas, marque quando concluídas e veja sua produtividade decolar. É como ter um plano de ação digital para transformar metas em realizações, tudo ao alcance do seu teclado. Experimente a to-do list para simplificar seu dia e atingir seus objetivos de maneira organizada. 
             </p>
@@ -81,7 +84,7 @@
     </main>
 
     <footer class="bg-marinho flex flex-row">
-        <p>Desenvolvido por André Guilherme & Tayane MIlagres | Todos os Direitos Reservados</p>
+        <p>Desenvolvido por André Guilherme & Tayane Milagres | Todos os Direitos Reservados</p>
     </footer>
 
     <script src="script.js"></script>
