--- a/src/Login/Index.html
+++ b/src/Login/Index.html
@@ -17,6 +17,9 @@
 
         <section class="navegacao">
             <ul class="flex flex-row">
+                <a href="../Home/Index.html" class="decoration-inherit">
+                    <li>Home</li>
+                </a>
                 <a href="" class="decoration-inherit">
                     <li>Sobre</li>
                 </a>
