--- a/src/Cadastro/Index.html
+++ b/src/Cadastro/Index.html
@@ -47,19 +47,19 @@
                 <label for="Nome">Nome Completo:
                     <span class="obrigatorio">*</span>
                 </label>
-                <input type="text" placeholder="Insira seu nome completo">
+                <input type="text" id="nome" name="nome" placeholder="Insira seu nome completo">
 
                 <label for="Email">Seu melhor Email:
                     <span class="obrigatorio">*</span>
                 </label>
-                <input type="email" placeholder="Insira seu email">
+                <input type="email" id="email" name="email" placeholder="Insira seu email">
 
                 <label for="senha">Senha:
                     <span class="obrigatorio">*</span>
                 </label>
-                <input type="password" name="senha" id="" placeholder="Insira sua senha">
+                <input type="password" id="senha" name="senha" id="" placeholder="Insira sua senha">
 
-                <button type="submit">CADASTRAR</button>
+                <button type="submit" id="btnCadastrar">CADASTRAR</button>
             </div>
 
            
