--- a/src/Cadastro/Index.html
+++ b/src/Cadastro/Index.html
@@ -41,7 +41,7 @@
 
         <section class="container">
             <h1 class="font-bold">Cadastre-se</h1>
-            <span>Se inscreva de forma 100% Gratuita</span>
+            <span class="gratuito">Se inscreva de forma 100% Gratuita</span>
 
             <div class="inputBox">
                 <label for="Nome">Nome Completo:
@@ -60,6 +60,8 @@
                 <input type="password" id="senha" name="senha" id="" placeholder="Insira sua senha">
 
                 <button type="submit" id="btnCadastrar">CADASTRAR</button>
+
+                <span class="possuiCadastro">Ja possui cadastro? <a href="../Login/Index.html">Fazer Login.</a></span>
             </div>
 
            
@@ -70,5 +72,6 @@
     <footer class="bg-marinho flex flex-row">
         <p>Desenvolvido por André Guilherme & Tayane Milagres | Todos os Direitos Reservados</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
