--- a/src/Login/Index.html
+++ b/src/Login/Index.html
@@ -56,7 +56,7 @@
                         </div>
                     </section>
                     
-                    <button id="login" type="submit" class="bg-blue-500 text-white px-8 py-2 rounded-md mt-4 hover:bg-blue-600">Login</button>
+                    <button id="btnLogin" type="submit" class="bg-blue-500 text-white px-8 py-2 rounded-md mt-4 hover:bg-blue-600">Login</button>
                 
                 </form>
 
