--- a/src/Login/Index.html
+++ b/src/Login/Index.html
@@ -22,13 +22,13 @@
                 <a href="../Home/Index.html" class="decoration-inherit">
                     <li>Home</li>
                 </a>
-                <a href="" class="decoration-inherit">
+                <a href="../Home/Index.html#sobre" class="decoration-inherit">
                     <li>Sobre</li>
                 </a>
-                <a href="" class="decoration-inherit">
+                <a href="Index.html" class="decoration-inherit">
                     <li>Login</li>
                 </a>
-                <a href="" class="decoration-inherit">
+                <a href="../Cadastro/Index.html" class="decoration-inherit">
                     <li>Cadastro</li>
                 </a>                
             </ul>
