--- a/src/Tarefas/index.html
+++ b/src/Tarefas/index.html
@@ -88,10 +88,10 @@
                 <div class="kanbanBlock" id="pendente" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <h2>A Fazer</h2>
                     <div class="task">
-                        <section class="dinamicTask">
+                        <section class="dinamicTask" id="Nome">
                             <h3>Relatório de administração</h2>
                             <span class="descricao">
-                                <p>Descrição do conteudo aqui embaixo, Descrição do conteudo.Descrição do conteudo de</p>
+                                <p id="Descricao">Descrição do conteudo aqui embaixo, Descrição do conteudo.Descrição do conteudo de</p>
                             </span>
 
                             <section class="interacao">
