add input descricao

--- a/src/Tarefas/index.html
+++ b/src/Tarefas/index.html
@@ -176,6 +176,12 @@
                             <button type="button" id="btnAdicionar">+</button>
                         </section>
 
+                        <label for="tarefaInput" style="margin-top: 2%;">Adicione a descrição:</label>
+                        <section class="input" style="margin-bottom: 2%;">
+                          <input type="text" id="tarefaInput" placeholder="Descrição curta da tarefa" maxlength="65">
+                            <button type="button" id="btnAdicionar">+</button>
+                        </section>
+
                         <div class="select">
                             <div id="category-select" style="flex-direction: row;">
                                 <label for="options-view-button tarefaInput">Categoria:</label>
